infrastructure/speedtest/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtest-tracker
  namespace: speedtest-tracker
  labels:
    app: speedtest-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: speedtest-tracker
  template:
    metadata:
      labels:
        app: speedtest-tracker
    spec:
      containers:
      - name: speedtest-tracker
        image: lscr.io/linuxserver/speedtest-tracker:latest
        volumeMounts:
        - name: config
          mountPath: /config
        ports:
        - containerPort: 80
          name: http
        resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: speedtest-tracker-pvc
